# handmade-hero

./: .gitignore  handmade-hero.10x_workspace  handmade.code-workspace  project.4coder
code/: file_formats.h  handmade.cpp  handmade.h  intrinsics.h  stb_truetype.h  test_asset_builder.cpp  types.h  util.h  win32_handmade.cpp
code/game/: asset.cpp  asset_type_id.h  audio.cpp  bmp.cpp  debug.cpp  entity.cpp  lib.cpp  lib.hpp  math.cpp  memory.cpp  random.cpp  render_group.cpp  sim_region.cpp  state.cpp  tile.cpp  world.cpp
code/linux/: gamecode.cpp  graphics.cpp  main.cpp  window.cpp
code/win32/: main.cpp
cpp/code/: handmade.cpp  handmade.h  win32_handmade.cpp
cpp/data/: .gitignore  test_write.out
cpp/misc/: build.bat
data/: .gitignore
misc/: build-linux.sh  build-task.bat  build.bat  shell.bat  static-check.bat
rust/: Cargo.toml  build.rs
rust/src/: lib.rs  main.rs
rust/src/game/: graphics.rs  input.rs  mod.rs  sound.rs
rust/src/win32/: graphics.rs  input.rs  mod.rs  sound.rs  util.rs  window.rs
