[package]
name = "handmade-rust"
version = "0.1.0"
authors = ["Arseniy Khvorov <khvorov45@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = {version="0.3", features=["winuser", "libloaderapi", "mmreg", "dsound"]}
anyhow = "1"
