[package]
name = "handmade-rust"
version = "0.1.0"
authors = ["Arseniy Khvorov <khvorov45@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
windows = "0.8.0"

[build-dependencies]
windows = "0.8.0"
